--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,5 @@
 name: taba_app_proj
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
@@ -9,43 +7,64 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.4.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.2.3+1
+ # flutter_native_splash: ^2.4.0
+  expandable: ^5.0.1
+  expansion_tile_card: ^3.0.0
+  expandable_page_view: ^1.0.17
+  table_calendar: ^3.0.6
   simple_ripple_animation : ^0.0.9
-  http: ^1.0.0
-  provider: ^6.0.1
+  http: ^1.2.1
+  provider: 6.0.1 #^6.1.2
+  flutter_sound: ^8.0.0
+  permission_handler: ^8.0.0
+  cloud_firestore: ^5.0.0
+  flutter_native_splash: ^2.4.0
+
+
+
+
+
+  avatar_glow:
+    git:
+      url: https://github.com/apgapg/avatar_glow
+      ref: master
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
+  fl_chart: ^0.35.0 # ^0.68.0
+  siri_wave: ^2.0.0+1
+  flutter_audio_waveforms: ^1.2.1+8
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
+  flutter_local_notifications: ^17.1.2
+  shared_preferences: ^2.2.3
+  path_provider: ^2.1.3
+  json_annotation: ^4.9.0
+  http_parser: ^4.0.2
+  flutter_launcher_icons: ^0.13.1
 
-flutter_native_splash:
-  background_image: "assets/gradient.png"
-  image: assets/splash.svg
-  android: true
-  ios: true
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,33 +79,4 @@ flutter:
     - assets/
     - assets/icon_eut.svg
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
