--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,10 +61,10 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
 
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/app_icon.png"
+#flutter_launcher_icons:
+#  android: true
+#  ios: true
+#  image_path: "assets/app_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
