--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
-  fl_chart: ^0.35.0 # ^0.68.0
+  fl_chart: ^0.35.0 # ^0.35.0 / 0.68.0
   siri_wave: ^2.0.0+1
   flutter_audio_waveforms: ^1.2.1+8
   firebase_auth: ^5.0.0
@@ -61,10 +61,10 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
 
-#flutter_launcher_icons:
-#  android: true
-#  ios: true
-#  image_path: "assets/app_icon.png"
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
