--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,16 +81,11 @@ flutter_launcher_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-  flutter:
-    fonts:
-      - family: NotoSansKR
-        fonts:
-          - asset: fonts/NotoSansKR-Regular.otf
-
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+flutter:
+#  fonts:
+#    - family: NotoSansKR
+#      fonts:
+#        - asset: fonts/NotoSansKR-Regular.otf
   uses-material-design: true
   assets:
     - assets/
