--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,48 +7,32 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.4.0 <4.0.0'
 
-
-
-
 dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
-
-#  fonts:
-#    -family: NotoSansKR
-#     fonts:
-#       -asset: fonts/NotoSansKR-Regular.otf
-
- # flutter_native_splash: ^2.4.0
   expandable: ^5.0.1
   expansion_tile_card: ^3.0.0
   expandable_page_view: ^1.0.17
   table_calendar: ^3.0.6
-  simple_ripple_animation : ^0.0.9
+  simple_ripple_animation: ^0.0.9
   http: ^1.2.1
-  provider: 6.0.1 #^6.1.2
+  provider: 6.0.1
   flutter_sound: ^8.0.0
   permission_handler: ^8.0.0
   cloud_firestore: ^5.0.0
   flutter_native_splash: ^2.4.0
-
-
-
-
-
+  google_sign_in: 6.1.2
+  flutter_facebook_auth: ^7.0.1
+  flutter_naver_login: 1.8.0  # 최신 버전으로 업데이트
+  kakao_flutter_sdk: 1.9.5
   avatar_glow:
     git:
       url: https://github.com/apgapg/avatar_glow
       ref: master
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
-  fl_chart: ^0.35.0 # ^0.35.0 / 0.68.0
+  fl_chart: ^0.35.0
   siri_wave: ^2.0.0+1
   flutter_audio_waveforms: ^1.2.1+8
   firebase_auth: ^5.0.0
@@ -62,14 +46,9 @@ dependencies:
   get: ^4.6.6
   firebase_messaging: ^15.0.1
 
-
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
 
@@ -77,18 +56,116 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/app_icon.png"
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-#  fonts:
-#    - family: NotoSansKR
-#      fonts:
-#        - asset: fonts/NotoSansKR-Regular.otf
   uses-material-design: true
   assets:
     - assets/
     - assets/icon_eut.svg
 
 
+#name: taba_app_proj
+#description: "A new Flutter project."
+#publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+#
+#version: 1.0.0+1
+#
+#environment:
+#  sdk: '>=3.4.0 <4.0.0'
+#
+#
+#
+#
+#dependencies:
+#  flutter:
+#    sdk: flutter
+#  intl: ^0.17.0
+#
+##  fonts:
+##    -family: NotoSansKR
+##     fonts:
+##       -asset: fonts/NotoSansKR-Regular.otf
+#
+# # flutter_native_splash: ^2.4.0
+#  expandable: ^5.0.1
+#  expansion_tile_card: ^3.0.0
+#  expandable_page_view: ^1.0.17
+#  table_calendar: ^3.0.6
+#  simple_ripple_animation : ^0.0.9
+#  http: ^1.2.1
+#  provider: 6.0.1 #^6.1.2
+#  flutter_sound: ^8.0.0
+#  permission_handler: ^8.0.0
+#  cloud_firestore: ^5.0.0
+#  flutter_native_splash: ^2.4.0
+#
+#  dependencies:
+#    flutter:
+#      sdk: flutter
+#   # firebase_auth: latest_version
+#    google_sign_in: 6.1.2
+#    flutter_facebook_auth: 5.1.2
+#    flutter_naver_login: 3.7.0
+#    flutter_kakao_login: 2.2.0
+#    # 기타 의존성들...
+#
+#
+#
+#
+#
+#
+#  avatar_glow:
+#    git:
+#      url: https://github.com/apgapg/avatar_glow
+#      ref: master
+#
+#
+#
+#  # The following adds the Cupertino Icons font to your application.
+#  # Use with the CupertinoIcons class for iOS style icons.
+#  cupertino_icons: ^1.0.6
+#  flutter_svg: ^2.0.10+1
+#  fl_chart: ^0.35.0 # ^0.35.0 / 0.68.0
+#  siri_wave: ^2.0.0+1
+#  flutter_audio_waveforms: ^1.2.1+8
+#  firebase_auth: ^5.0.0
+#  firebase_core: ^3.0.0
+#  flutter_local_notifications: ^17.1.2
+#  shared_preferences: ^2.2.3
+#  path_provider: ^2.1.3
+#  json_annotation: ^4.9.0
+#  http_parser: ^4.0.2
+#  flutter_launcher_icons: ^0.13.1
+#  get: ^4.6.6
+#  firebase_messaging: ^15.0.1
+#
+#
+#
+#
+#
+#dev_dependencies:
+#  flutter_test:
+#    sdk: flutter
+#
+#  flutter_lints: ^3.0.0
+#  flutter_launcher_icons: ^0.13.1
+#
+#flutter_launcher_icons:
+#  android: true
+#  ios: true
+#  image_path: "assets/app_icon.png"
+## For information on the generic Dart part of this file, see the
+## following page: https://dart.dev/tools/pub/pubspec
+#
+## The following section is specific to Flutter packages.
+#flutter:
+##  fonts:
+##    - family: NotoSansKR
+##      fonts:
+##        - asset: fonts/NotoSansKR-Regular.otf
+#  uses-material-design: true
+#  assets:
+#    - assets/
+#    - assets/icon_eut.svg
+#
+#
