소셜네트워크 구현하는 로그인 화면 문제 수정 & 통계화면 responsive_bulider 수정 추가.. 어려움

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   get: ^4.6.6
   firebase_messaging: ^15.0.1
   responsive_builder:
-
+  sign_in_with_apple: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
