--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,76 @@
+//plugins {
+//    id "com.android.application"
+//    // START: FlutterFire Configuration
+//    id 'com.google.gms.google-services'
+//    // END: FlutterFire Configuration
+//    id "kotlin-android"
+//    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+//    id "dev.flutter.flutter-gradle-plugin"
+//}
+//
+//def localProperties = new Properties()
+//def localPropertiesFile = rootProject.file("local.properties")
+//if (localPropertiesFile.exists()) {
+//    localPropertiesFile.withReader("UTF-8") { reader ->
+//        localProperties.load(reader)
+//    }
+//}
+//
+//def flutterVersionCode = localProperties.getProperty("flutter.versionCode")
+//if (flutterVersionCode == null) {
+//    flutterVersionCode = "1"
+//}
+//
+//def flutterVersionName = localProperties.getProperty("flutter.versionName")
+//if (flutterVersionName == null) {
+//    flutterVersionName = "1.0"
+//}
+//
+//android {
+//    namespace = "com.example.taba_app_proj"
+//    compileSdk = flutter.compileSdkVersion
+//    ndkVersion = flutter.ndkVersion
+//
+//    compileOptions {
+//        sourceCompatibility = JavaVersion.VERSION_1_8
+//        targetCompatibility = JavaVersion.VERSION_1_8
+//    }
+//
+//    defaultConfig {
+//        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+//        applicationId = "com.example.taba_app_proj"
+//        // You can update the following values to match your application needs.
+//        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+//        minSdkVersion 23
+//        targetSdk = flutter.targetSdkVersion
+//        versionCode = flutterVersionCode.toInteger()
+//        versionName = flutterVersionName
+//        multiDexEnabled true
+//    }
+//
+//    buildTypes {
+//        release {
+//            // TODO: Add your own signing config for the release build.
+//            // Signing with the debug keys for now, so `flutter run --release` works.
+//            signingConfig = signingConfigs.debug
+//        }
+//    }
+//}
+//
+//flutter {
+//    source = "../.."
+//}
+//
+//dependencies {
+//    implementation 'androidx.window:window:1.0.0'
+//    implementation 'androidx.window:window-java:1.0.0'
+//    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+//}
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services" // FlutterFire Configuration
+    id "dev.flutter.flutter-gradle-plugin" // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
 }
 
 def localProperties = new Properties()
@@ -28,7 +93,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.taba_app_proj"
-    compileSdk = flutter.compileSdkVersion
+    compileSdkVersion 34 // 최신 버전으로 변경
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -37,21 +102,16 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.taba_app_proj"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutterVersionCode.toInteger()
-        versionName = flutterVersionName
+        targetSdkVersion 34 // 최신 버전으로 변경
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
         multiDexEnabled true
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -65,4 +125,5 @@ dependencies {
     implementation 'androidx.window:window:1.0.0'
     implementation 'androidx.window:window-java:1.0.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // Kotlin 표준 라이브러리 추가
 }
